hphp/hack/test/typecheck/parameter_modifiers/parameter_modifiers_optional_readonly.php
<?hh

function f1((function(optional readonly bool): void) $_): void {}
function f2((function(readonly optional bool): void) $_): void {}
